--- a/core/pom.xml
+++ b/core/pom.xml
@@ -95,6 +95,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>yuhao.yang</groupId>
+            <artifactId>opencv-analytics</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.major.version}</artifactId>
             <version>${scalatest.version}</version>
@@ -135,6 +140,11 @@
             <artifactId>scalatest_${scala.major.version}</artifactId>
             <version>${scalatest.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
         </dependency>
 
     </dependencies>
